--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CandidateConnection" : "Server=(localdb)\\localhost;Database=CandidateDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
